--- a/index.html
+++ b/index.html
@@ -1,131 +1,37 @@
-<script>
-    // Map API data for astrochart
-    function mapApiData(apiData) {
-        const planetNameMapping = {
-            "الشمس": "Sun",
-            "القمر": "Moon",
-            "عطارد": "Mercury",
-            "الزهرة": "Venus",
-            "المريخ": "Mars",
-            "المشتري": "Jupiter",
-            "زحل": "Saturn",
-            "أورانوس": "Uranus",
-            "نبتون": "Neptune",
-            "بلوتو": "Pluto",
-        };
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>الجدول الفلكي التفاعلي</title>
+</head>
+<body>
+    <form id="chartForm">
+        <input type="text" id="name" placeholder="الاسم الكامل" required>
+        <input type="date" id="birthDate" required>
+        <input type="time" id="birthTime" required>
+        <input type="text" id="location" placeholder="الموقع (المدينة، الدولة)" required>
+        <button type="submit">إنشاء الرسم البياني</button>
+    </form>
 
-        const mappedPlanets = {};
-        for (const planet of apiData.planets || []) {
-            const englishName = planetNameMapping[planet.name];
-            if (englishName && !isNaN(planet.position)) {
-                mappedPlanets[englishName] = [planet.position];
+    <div id="chartContainer"></div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const formElement = document.getElementById("chartForm");
+            console.log("Form Element:", formElement);
+
+            if (formElement) {
+                formElement.addEventListener("submit", async function (event) {
+                    event.preventDefault();
+                    console.log("Form submitted");
+
+                    // Add your API call and rendering logic here
+                });
+            } else {
+                console.error("Form element with id 'chartForm' not found.");
             }
-        }
-
-        return {
-            planets: mappedPlanets,
-            cusps: apiData.cusps || [],
-            aspects: apiData.aspects || [],
-        };
-    }
-
-    // Populate the table
-    function populateTable(planets, houses, ascendant) {
-        const tableBody = document.querySelector("#dataTable tbody");
-        tableBody.innerHTML = ""; // Clear existing rows
-
-        planets.forEach((planet) => {
-            const row = document.createElement("tr");
-            row.innerHTML = `
-                <td>كوكب</td>
-                <td>${planet.name}</td>
-                <td>${planet.position || "N/A"}°</td>
-                <td>${planet.zodiac_sign || "N/A"}</td>
-            `;
-            tableBody.appendChild(row);
         });
-
-        houses.forEach((house) => {
-            const row = document.createElement("tr");
-            row.innerHTML = `
-                <td>بيت</td>
-                <td>بيت ${house.house}</td>
-                <td>${house.degree || "N/A"}°</td>
-                <td>${house.zodiac_sign || "N/A"}</td>
-            `;
-            tableBody.appendChild(row);
-        });
-
-        if (ascendant) {
-            const row = document.createElement("tr");
-            row.innerHTML = `
-                <td>طالع</td>
-                <td>الطالع</td>
-                <td>${ascendant.degree || "N/A"}°</td>
-                <td>${ascendant.zodiac_sign || "N/A"}</td>
-            `;
-            tableBody.appendChild(row);
-        }
-
-        document.getElementById("dataTable").style.display = "table";
-    }
-
-    // Form submission event
-    document.getElementById("chartForm").addEventListener("submit", async function (event) {
-        event.preventDefault();
-
-        const name = document.getElementById("name").value;
-        const birthDate = document.getElementById("birthDate").value;
-        const birthTime = document.getElementById("birthTime").value;
-        const location = document.getElementById("location").value;
-
-        const apiUrl = "https://astrologychartapi.onrender.com/calculate_chart";
-        const errorMessage = document.getElementById("errorMessage");
-        const chartContainer = document.getElementById("chartContainer");
-
-        try {
-            const requestData = {
-                name: name,
-                birth_date: birthDate,
-                birth_time: birthTime,
-                location: location,
-            };
-
-            const response = await fetch(apiUrl, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(requestData),
-            });
-
-            if (!response.ok) {
-                const errorDetails = await response.json();
-                console.error("API Error Details:", errorDetails);
-                throw new Error(`HTTP error! status: ${response.status}`);
-            }
-
-            const apiData = await response.json();
-            console.log("Raw API Response:", apiData);
-
-            // Map API data to AstroChart format
-            const chartData = mapApiData(apiData);
-            console.log("Sanitized Chart Data:", chartData);
-
-            // Render the chart
-            try {
-                const chart = new astrochart.Chart("chartContainer", 800, 800);
-                chart.radix(chartData);
-                chartContainer.style.display = "block";
-                console.log("Chart rendered successfully!");
-            } catch (chartError) {
-                console.error("Error rendering chart:", chartError);
-            }
-
-            // Populate the table
-            populateTable(apiData.planets, apiData.houses, apiData.ascendant);
-
-        } catch (error) {
-            console.error("Error fetching or rendering chart data:", error);
-            errorMessage.style.display = "block";
-        }
-    });
-</script>
+    </script>
+</body>
+</html>
