--- a/index.html
+++ b/index.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الجدول الفلكي التفاعلي</title>
+    <script src="https://unpkg.com/@astrodraw/astrochart"></script>
+    <style>
+        #chartContainer {
+            width: 800px;
+            height: 800px;
+            margin: 20px auto;
+            border: 1px solid black;
+            display: none;
+        }
+        #dataTable {
+            width: 80%;
+            margin: 20px auto;
+            border-collapse: collapse;
+            text-align: right;
+        }
+        #dataTable th, #dataTable td {
+            border: 1px solid black;
+            padding: 10px;
+        }
+        h1, h2 {
+            text-align: center;
+        }
+        form {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        input, button {
+            margin: 5px;
+        }
+        #errorMessage {
+            color: red;
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
+    <h1>الجدول الفلكي التفاعلي</h1>
     <form id="chartForm">
         <input type="text" id="name" placeholder="الاسم الكامل" required>
         <input type="date" id="birthDate" required>
@@ -13,25 +49,119 @@
         <input type="text" id="location" placeholder="الموقع (المدينة، الدولة)" required>
         <button type="submit">إنشاء الرسم البياني</button>
     </form>
-
+    <div id="errorMessage" style="display: none;">فشل تحميل البيانات. يرجى التحقق من الإدخال الخاص بك.</div>
     <div id="chartContainer"></div>
-
+    <h2>بيانات الكواكب والطالع</h2>
+    <table id="dataTable" style="display: none;">
+        <thead>
+            <tr>
+                <th>الجسم الفلكي</th>
+                <th>الدرجة</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const formElement = document.getElementById("chartForm");
-            console.log("Form Element:", formElement);
+        document.getElementById("chartForm").addEventListener("submit", async function (event) {
+            event.preventDefault();
 
-            if (formElement) {
-                formElement.addEventListener("submit", async function (event) {
-                    event.preventDefault();
-                    console.log("Form submitted");
+            const name = document.getElementById("name").value;
+            const birthDate = document.getElementById("birthDate").value;
+            const birthTime = document.getElementById("birthTime").value;
+            const location = document.getElementById("location").value;
 
-                    // Add your API call and rendering logic here
+            const apiUrl = "https://astrologychartapi.onrender.com/calculate_chart";
+            const errorMessage = document.getElementById("errorMessage");
+            const chartContainer = document.getElementById("chartContainer");
+            const dataTable = document.getElementById("dataTable");
+
+            try {
+                const requestData = {
+                    name: name,
+                    birth_date: birthDate,
+                    birth_time: birthTime,
+                    location: location,
+                };
+
+                console.log("Request Data (sent to API):", JSON.stringify(requestData));
+
+                const response = await fetch(apiUrl, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(requestData),
                 });
-            } else {
-                console.error("Form element with id 'chartForm' not found.");
+
+                if (!response.ok) {
+                    const errorDetails = await response.json();
+                    console.error("API Error Details:", errorDetails);
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+
+                const apiData = await response.json();
+                console.log("Raw API Response:", apiData);
+
+                // Map API data to AstroChart format
+                const chartData = mapApiData(apiData);
+                console.log("Sanitized Planets Data:", chartData.planets);
+
+                // Render the chart
+                const chart = new astrochart.Chart("chartContainer", 800, 800);
+                chart.radix(chartData);
+
+                // Show the chart container
+                chartContainer.style.display = "block";
+                console.log("Chart rendered successfully!");
+
+                // Populate the data table
+                populateTable(apiData.planets, apiData.cusps);
+
+                // Show the table
+                dataTable.style.display = "table";
+            } catch (error) {
+                console.error("Error fetching or rendering chart data:", error);
+                errorMessage.style.display = "block";
             }
         });
+
+        // Populate data table
+        function populateTable(planets, cusps) {
+            const tableBody = document.querySelector("#dataTable tbody");
+            tableBody.innerHTML = ""; // Clear any existing rows
+
+            // Add planets to the table
+            Object.entries(planets).forEach(([index, planetData]) => {
+                const row = document.createElement("tr");
+                const arabicNameCell = document.createElement("td");
+                const longitudeCell = document.createElement("td");
+
+                // Check if planetData contains valid fields
+                if (planetData && planetData.name && !isNaN(planetData.longitude)) {
+                    arabicNameCell.textContent = planetData.name; // Arabic planet name
+                    longitudeCell.textContent = `${planetData.longitude.toFixed(2)}°`; // Longitude value
+                } else {
+                    arabicNameCell.textContent = `غير معروف (${index})`; // Fallback for invalid planets
+                    longitudeCell.textContent = "N/A";
+                }
+
+                row.appendChild(arabicNameCell);
+                row.appendChild(longitudeCell);
+                tableBody.appendChild(row);
+            });
+
+            // Add ascendant and house cusps
+            cusps.forEach((cusp, index) => {
+                const row = document.createElement("tr");
+                const houseCell = document.createElement("td");
+                const cuspCell = document.createElement("td");
+
+                houseCell.textContent = `بيت ${index + 1}`; // House number
+                cuspCell.textContent = `${cusp.toFixed(2)}°`; // Cusp degree
+
+                row.appendChild(houseCell);
+                row.appendChild(cuspCell);
+                tableBody.appendChild(row);
+            });
+        }
     </script>
 </body>
 </html>
