--- a/index.html
+++ b/index.html
@@ -55,13 +55,88 @@
     <table id="dataTable" style="display: none;">
         <thead>
             <tr>
+                <th>النوع</th>
                 <th>الجسم الفلكي</th>
                 <th>الدرجة</th>
+                <th>البرج</th>
             </tr>
         </thead>
         <tbody></tbody>
     </table>
     <script>
+        // Map API data to the format required by AstroChart
+        function mapApiData(apiData) {
+            const planetNameMapping = {
+                "الشمس": "Sun",
+                "القمر": "Moon",
+                "عطارد": "Mercury",
+                "الزهرة": "Venus",
+                "المريخ": "Mars",
+                "المشتري": "Jupiter",
+                "زحل": "Saturn",
+                "أورانوس": "Uranus",
+                "نبتون": "Neptune",
+                "بلوتو": "Pluto",
+            };
+
+            const mappedPlanets = {};
+            for (const planet of apiData.planets || []) {
+                const englishName = planetNameMapping[planet.name];
+                if (englishName && !isNaN(planet.position)) {
+                    mappedPlanets[englishName] = [planet.position];
+                }
+            }
+
+            return {
+                planets: mappedPlanets,
+                cusps: apiData.cusps || [],
+                aspects: apiData.aspects || [],
+            };
+        }
+
+        // Populate the table with backend data
+        function populateTable(planets, houses, ascendant) {
+            const tableBody = document.querySelector("#dataTable tbody");
+            tableBody.innerHTML = ""; // Clear existing rows
+
+            // Add planets
+            planets.forEach((planet) => {
+                const row = document.createElement("tr");
+                row.innerHTML = `
+                    <td>كوكب</td>
+                    <td>${planet.name}</td>
+                    <td>${planet.position.toFixed(2) || "N/A"}°</td>
+                    <td>${planet.zodiac_sign || "N/A"}</td>
+                `;
+                tableBody.appendChild(row);
+            });
+
+            // Add houses
+            houses.forEach((house) => {
+                const row = document.createElement("tr");
+                row.innerHTML = `
+                    <td>بيت</td>
+                    <td>بيت ${house.house}</td>
+                    <td>${house.degree.toFixed(2) || "N/A"}°</td>
+                    <td>${house.zodiac_sign || "N/A"}</td>
+                `;
+                tableBody.appendChild(row);
+            });
+
+            // Add ascendant
+            const row = document.createElement("tr");
+            row.innerHTML = `
+                <td>طالع</td>
+                <td>الطالع</td>
+                <td>${ascendant.degree.toFixed(2) || "N/A"}°</td>
+                <td>${ascendant.zodiac_sign || "N/A"}</td>
+            `;
+            tableBody.appendChild(row);
+
+            document.getElementById("dataTable").style.display = "table";
+        }
+
+        // Form submission event handler
         document.getElementById("chartForm").addEventListener("submit", async function (event) {
             event.preventDefault();
 
@@ -73,17 +148,14 @@
             const apiUrl = "https://astrologychartapi.onrender.com/calculate_chart";
             const errorMessage = document.getElementById("errorMessage");
             const chartContainer = document.getElementById("chartContainer");
-            const dataTable = document.getElementById("dataTable");
 
             try {
                 const requestData = {
-                    name: name,
+                    name,
                     birth_date: birthDate,
                     birth_time: birthTime,
-                    location: location,
+                    location,
                 };
-
-                console.log("Request Data (sent to API):", JSON.stringify(requestData));
 
                 const response = await fetch(apiUrl, {
                     method: "POST",
@@ -92,76 +164,24 @@
                 });
 
                 if (!response.ok) {
-                    const errorDetails = await response.json();
-                    console.error("API Error Details:", errorDetails);
-                    throw new Error(`HTTP error! status: ${response.status}`);
+                    throw new Error(`HTTP error: ${response.status}`);
                 }
 
                 const apiData = await response.json();
-                console.log("Raw API Response:", apiData);
+                console.log("API Response:", apiData);
 
-                // Map API data to AstroChart format
+                // Map the API data and render the chart
                 const chartData = mapApiData(apiData);
-                console.log("Sanitized Planets Data:", chartData.planets);
-
-                // Render the chart
                 const chart = new astrochart.Chart("chartContainer", 800, 800);
                 chart.radix(chartData);
 
-                // Show the chart container
                 chartContainer.style.display = "block";
-                console.log("Chart rendered successfully!");
-
-                // Populate the data table
-                populateTable(apiData.planets, apiData.cusps);
-
-                // Show the table
-                dataTable.style.display = "table";
+                populateTable(apiData.planets, apiData.houses, apiData.ascendant);
             } catch (error) {
-                console.error("Error fetching or rendering chart data:", error);
+                console.error("Error:", error);
                 errorMessage.style.display = "block";
             }
         });
-
-        // Populate data table
-        function populateTable(planets, cusps) {
-            const tableBody = document.querySelector("#dataTable tbody");
-            tableBody.innerHTML = ""; // Clear any existing rows
-
-            // Add planets to the table
-            Object.entries(planets).forEach(([index, planetData]) => {
-                const row = document.createElement("tr");
-                const arabicNameCell = document.createElement("td");
-                const longitudeCell = document.createElement("td");
-
-                // Check if planetData contains valid fields
-                if (planetData && planetData.name && !isNaN(planetData.longitude)) {
-                    arabicNameCell.textContent = planetData.name; // Arabic planet name
-                    longitudeCell.textContent = `${planetData.longitude.toFixed(2)}°`; // Longitude value
-                } else {
-                    arabicNameCell.textContent = `غير معروف (${index})`; // Fallback for invalid planets
-                    longitudeCell.textContent = "N/A";
-                }
-
-                row.appendChild(arabicNameCell);
-                row.appendChild(longitudeCell);
-                tableBody.appendChild(row);
-            });
-
-            // Add ascendant and house cusps
-            cusps.forEach((cusp, index) => {
-                const row = document.createElement("tr");
-                const houseCell = document.createElement("td");
-                const cuspCell = document.createElement("td");
-
-                houseCell.textContent = `بيت ${index + 1}`; // House number
-                cuspCell.textContent = `${cusp.toFixed(2)}°`; // Cusp degree
-
-                row.appendChild(houseCell);
-                row.appendChild(cuspCell);
-                tableBody.appendChild(row);
-            });
-        }
     </script>
 </body>
 </html>
