--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <tbody></tbody>
     </table>
     <script>
-        // Map API data to the format required by AstroChart
+        // Ensure mapApiData is defined before usage
         function mapApiData(apiData) {
             const planetNameMapping = {
                 "الشمس": "Sun",
