--- a/index.html
+++ b/index.html
@@ -51,20 +51,7 @@
     </form>
     <div id="errorMessage" style="display: none;">فشل تحميل البيانات. يرجى التحقق من الإدخال الخاص بك.</div>
     <div id="chartContainer"></div>
-    <h2>بيانات الكواكب والطالع</h2>
-    <table id="dataTable" style="display: none;">
-        <thead>
-            <tr>
-                <th>النوع</th>
-                <th>الجسم الفلكي</th>
-                <th>الدرجة</th>
-                <th>البرج</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
     <script>
-        // Map API data to AstroChart format
         function mapApiData(apiData) {
             const planetNameMapping = {
                 "الشمس": "Sun",
@@ -87,16 +74,18 @@
                 }
             }
 
+            const cusps = apiData.cusps || [];
+            while (cusps.length < 12) {
+                cusps.push(0);
+            }
+
             return {
                 planets: mappedPlanets,
-                cusps: apiData.cusps || [],
+                cusps: cusps.slice(0, 12),
                 aspects: apiData.aspects || [],
             };
         }
 
-        console.log("mapApiData function defined:", typeof mapApiData); // Debugging
-
-        // Form submission
         document.getElementById("chartForm").addEventListener("submit", async function (event) {
             event.preventDefault();
 
@@ -117,8 +106,6 @@
                     location,
                 };
 
-                console.log("Sending request to API:", requestData);
-
                 const response = await fetch(apiUrl, {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
@@ -130,9 +117,11 @@
                 }
 
                 const apiData = await response.json();
-                console.log("API Response:", apiData);
+                console.log("API Data:", apiData);
 
                 const chartData = mapApiData(apiData);
+                console.log("Mapped Cusps:", chartData.cusps);
+
                 const chart = new astrochart.Chart("chartContainer", 800, 800);
                 chart.radix(chartData);
 
@@ -144,4 +133,4 @@
         });
     </script>
 </body>
-</html
+</html>
