--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
         <tbody></tbody>
     </table>
     <script>
-        // Map API data to AstroChart format
         function mapApiData(apiData) {
             const planetNameMapping = {
                 "الشمس": "Sun",
@@ -88,7 +87,7 @@
 
             const cusps = apiData.cusps || [];
             while (cusps.length < 12) {
-                cusps.push(0);
+                cusps.push(0); // Ensure 12 cusps
             }
 
             return {
@@ -98,30 +97,37 @@
             };
         }
 
-        // Populate table with data
         function populateTable(apiData) {
             const tableBody = document.querySelector("#dataTable tbody");
-            tableBody.innerHTML = ""; // Clear any existing rows
+            tableBody.innerHTML = "";
 
-            // Add planets
-            apiData.planets.forEach((planet) => {
+            const planets = apiData.planets || [];
+            const houses = apiData.houses || [];
+
+            if (!planets.length && !houses.length) {
+                console.error("No valid data to populate the table.");
+                return;
+            }
+
+            // Populate planets
+            planets.forEach((planet) => {
                 const row = document.createElement("tr");
-                const planetCell = document.createElement("td");
+                const nameCell = document.createElement("td");
                 const degreeCell = document.createElement("td");
                 const signCell = document.createElement("td");
 
-                planetCell.textContent = planet.name;
+                nameCell.textContent = planet.name;
                 degreeCell.textContent = `${planet.position.toFixed(2)}°`;
                 signCell.textContent = planet.zodiac_sign;
 
-                row.appendChild(planetCell);
+                row.appendChild(nameCell);
                 row.appendChild(degreeCell);
                 row.appendChild(signCell);
                 tableBody.appendChild(row);
             });
 
-            // Add houses
-            apiData.houses.forEach((house) => {
+            // Populate houses
+            houses.forEach((house) => {
                 const row = document.createElement("tr");
                 const houseCell = document.createElement("td");
                 const degreeCell = document.createElement("td");
@@ -140,7 +146,6 @@
             document.getElementById("dataTable").style.display = "table";
         }
 
-        // Form submission event
         document.getElementById("chartForm").addEventListener("submit", async function (event) {
             event.preventDefault();
 
@@ -154,13 +159,7 @@
             const chartContainer = document.getElementById("chartContainer");
 
             try {
-                const requestData = {
-                    name,
-                    birth_date: birthDate,
-                    birth_time: birthTime,
-                    location,
-                };
-
+                const requestData = { name, birth_date: birthDate, birth_time: birthTime, location };
                 const response = await fetch(apiUrl, {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
@@ -182,7 +181,6 @@
 
                 // Populate table
                 populateTable(apiData);
-
             } catch (error) {
                 console.error("Error fetching or rendering chart data:", error);
                 errorMessage.style.display = "block";
